fix(menu): elevate z-index only when a submenu is active
Refactors the main menu stacking logic to use a conditional check instead of
:hover. This prevents the menu wrapper from obscuring other header popups
unless a main menu item is explicitly open.

--- a/@utahdts/utah-design-system/css/6-components/base-components/navigation/_main-menu.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/navigation/_main-menu.scss
@@ -5,7 +5,9 @@
   &.main-menu__outer {
     position: relative;
     z-index: 2500;
-    &:hover {
+
+    // Only elevate z-index if a child popup is currently active/visible
+    &:has(.popup__wrapper:not(.popup__wrapper--hidden)) {
       z-index: 4000;
     }
   }
